--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
   </title>
 </head>
 
-<body style="background-color: #120C17">
-  <div id="app" style="background-image: url('/wowproject/src/assets/logo.png'); background-color: transparent;"></div>
+<body style="background: #120C17">
+  <div id="app">
+  </div>
   <!-- built files will be auto injected -->
 </body>
 
